# mindconnect-lib

./: CHANGELOG.md  CMakeLists.txt  LICENSE.md  README.md  ReadMe_OSS.htm  ReadMe_OSS.html  SonySpresenseGuide.md  build_helper_cross_compile_for_rpi.sh  build_helper_linux.sh  build_helper_win64.bat
mcl_connectivity/: .mbedignore  CMakeLists.txt
mcl_connectivity/doc/: CMakeLists.txt  mcl_connectivity.doxyfile
mcl_connectivity/examples/: callbacks.c  callbacks.h  create_mapping.c  dsc_upload.c  event_upload.c  file_upload.c  store_upload.c  timeseries_upload.c
mcl_connectivity/include/mcl_connectivity/: mcl_connectivity.h  mcl_connectivity_common.h  mcl_connectivity_configuration.h  mcl_custom_data.h  mcl_data_point.h  mcl_data_source.h  mcl_data_source_configuration.h  mcl_event.h  mcl_file.h  mcl_mapping.h  mcl_store.h  mcl_timeseries.h  mcl_timeseries_value.h  mcl_timeseries_value_list.h
mcl_connectivity/src/: CMakeLists.txt  connectivity.c  connectivity.h  connectivity_common.c  connectivity_common.h  connectivity_configuration.c  connectivity_configuration.h  connectivity_processor.c  connectivity_processor.h  custom_data.c  custom_data.h  data_point.c  data_point.h  data_source.c  data_source.h  data_source_configuration.c  data_source_configuration.h  event.c  event.h  file.c  file.h  item.h  json.c  json.h  mapping.c  mapping.h  multipart.c  multipart.h  store.c  store.h  timeseries.c  timeseries.h  timeseries_value.c  timeseries_value.h  timeseries_value_list.c  timeseries_value_list.h
mcl_connectivity/test/: CMakeLists.txt
mcl_connectivity/test/integration/: CMakeLists.txt  test_create_mapping.c  test_exchange.c  test_get_data_source_configuration.c
mcl_connectivity/test/unit/: CMakeLists.txt  test_connectivity_configuration.c  test_custom_data.c  test_data_point.c  test_data_source.c  test_data_source_configuration.c  test_event.c  test_file.c  test_json.c  test_mapping.c  test_multipart.c  test_processor.c  test_store.c  test_timeseries.c  test_timeseries_value.c  test_timeseries_value_list.c
mcl_core/: .mbedignore  CMakeLists.txt
mcl_core/doc/: CMakeLists.txt  mcl_core.doxyfile
mcl_core/examples/: callbacks.c  onboard.c
mcl_core/include/mcl_core/: mcl_assert.h  mcl_config.h  mcl_config_setup.h  mcl_core.h  mcl_core_common.h  mcl_core_configuration.h  mcl_file_util.h  mcl_http_client.h  mcl_http_request.h  mcl_http_response.h  mcl_json_util.h  mcl_list.h  mcl_log_util.h  mcl_memory.h  mcl_random.h  mcl_string_util.h  mcl_time_util.h  mcl_version.h
mcl_core/lib/cJSON/: CMakeLists.txt  cJSON.c  cJSON.h
mcl_core/src/: CMakeLists.txt  base64.c  base64.h  core.c  core.h  core_common.c  core_common.h  core_configuration.c  core_configuration.h  core_processor.c  core_processor.h  definitions.h  hmac.c  hmac.h  http_definitions.c  http_definitions.h  http_request.c  http_request.h  http_response.c  http_response.h  json_util.c  json_util.h  jwt.c  jwt.h  list.c  list.h  log_util.c  log_util.h  random.c  random.h  security.h  security_handler.c  security_handler.h  string_util.c  string_util.h  time_util.c  time_util.h
mcl_core/test/: CMakeLists.txt
mcl_core/test/integration/: CMakeLists.txt  test_mcl_http_client.c  test_onboard_rsa.c  test_onboard_shared_secret.c  test_rotate_key_rsa.c  test_rotate_key_shared_secret.c
mcl_core/test/unit/: CMakeLists.txt  test_base64.c  test_core.c  test_core_configuration.c  test_core_processor.c  test_crypto_openssl.c  test_file_util_standard.c  test_hmac.c  test_http_client_curl.c  test_http_request.c  test_http_response.c  test_json_util.c  test_jwt.c  test_jwt.c.orig  test_list.c  test_log_util.c  test_mcl_string_util.c  test_memory_standard.c  test_random.c  test_security_handler.c  test_time_util.c
mcl_data_lake/: CMakeLists.txt
mcl_data_lake/doc/: CMakeLists.txt  mcl_data_lake.doxyfile
mcl_data_lake/examples/: data_lake_upload.c
mcl_data_lake/include/mcl_data_lake/: mcl_data_lake.h  mcl_data_lake_common.h  mcl_data_lake_configuration.h  mcl_data_lake_object.h
mcl_data_lake/src/: CMakeLists.txt  data_lake.c  data_lake.h  data_lake_common.c  data_lake_common.h  data_lake_configuration.c  data_lake_configuration.h  data_lake_json.c  data_lake_json.h  data_lake_object.c  data_lake_object.h  data_lake_processor.c  data_lake_processor.h
mcl_data_lake/test/integration/: CMakeLists.txt  test_mcl_data_lake.c
mcl_data_lake/test/unit/: CMakeLists.txt  cmock.yml.in  test_data_lake.c  test_data_lake_configuration.c  test_data_lake_json.c  test_data_lake_object.c  test_data_lake_processor.c
mcl_deployment/: CMakeLists.txt
mcl_deployment/doc/: CMakeLists.txt  mcl_deployment.doxyfile
mcl_deployment/examples/: manage_deployment.c
mcl_deployment/include/mcl_deployment/: mcl_deployment.h  mcl_deployment_common.h  mcl_deployment_configuration.h  mcl_deployment_workflow.h  mcl_deployment_workflow_filter.h  mcl_deployment_workflow_model.h  mcl_deployment_workflow_model_state.h  mcl_deployment_workflow_model_state_group.h  mcl_deployment_workflow_model_transition.h  mcl_deployment_workflow_state.h
mcl_deployment/src/: CMakeLists.txt  deployment.c  deployment.h  deployment_common.c  deployment_common.h  deployment_configuration.c  deployment_configuration.h  deployment_json.c  deployment_json.h  deployment_processor.c  deployment_processor.h  deployment_workflow.c  deployment_workflow.h  deployment_workflow_filter.c  deployment_workflow_filter.h  deployment_workflow_model.c  deployment_workflow_model.h  deployment_workflow_model_state.c  deployment_workflow_model_state.h  deployment_workflow_model_state_group.c  deployment_workflow_model_state_group.h  deployment_workflow_model_transition.c  deployment_workflow_model_transition.h  deployment_workflow_state.c  deployment_workflow_state.h
mcl_deployment/test/integration/: CMakeLists.txt  test_deployment_component.c
mcl_deployment/test/unit/: CMakeLists.txt  cmock.yml.in  test_deployment.c  test_deployment_configuration.c  test_deployment_workflow.c  test_deployment_workflow_filter.c  test_deployment_workflow_model.c  test_deployment_workflow_model_state.c  (+3 more)
(+24 files in other folders)
