# Set component name.
SET(MCL_COMPONENT "connectivity")

# Set path of MCL Connectivity's root Cmake directory.
SET(MCL_CONNECTIVITY_CMAKE_ROOT_DIR ${CMAKE_CURRENT_SOURCE_DIR})

# Set MCL_CONNECTIVITY_SOURCES to collect source files from different locations.
SET(MCL_CONNECTIVITY_SOURCES "" CACHE INTERNAL "MCL_CONNECTIVITY_SOURCES" FORCE)
SET(MCL_CONNECTIVITY_LIBS "" CACHE INTERNAL "MCL_CONNECTIVITY_LIBS" FORCE)
SET(MCL_CONNECTIVITY_INCLUDE_DIRECTORIES "" CACHE INTERNAL "MCL_CONNECTIVITY_INCLUDE_DIRECTORIES" FORCE)

IF(MCL_CONNECTIVITY)
    MESSAGE(STATUS "MCL Connectivity build is ${MCL_CONNECTIVITY}.")
    ADD_DEFINITIONS(-DMCL_CONNECTIVITY_BUILD=1)
ENDIF()

IF(MCL_STATICLIB)
    SET(MCL_USER_DEFINED_DYNAMIC_OR_STATIC STATIC)
    ADD_DEFINITIONS(-DMCL_STATICLIB=1)
ELSE()
    SET(MCL_USER_DEFINED_DYNAMIC_OR_STATIC SHARED)
    ADD_DEFINITIONS(-DMCL_STATICLIB=0)
ENDIF()

MESSAGE(STATUS "MCL Connectivity will be built as ${MCL_USER_DEFINED_DYNAMIC_OR_STATIC} library.")

# MCL CONNECTIVITY sources.
ADD_SUBDIRECTORY(src)

IF(MCL_TEST AND RUBY_FOUND)
    # Turn on CMake testing capabilities.
    ENABLE_TESTING()
    ADD_SUBDIRECTORY(test)
ENDIF()
       
# Doxygen.
IF(MCL_DOC)
    ADD_SUBDIRECTORY(doc)   
    ADD_DEPENDENCIES(mcl_connectivity mcl_connectivity_doc)    
    MESSAGE(STATUS "Creation of reference documentation is enabled.")
ELSE()
    MESSAGE(STATUS "Creation of reference documentation is disabled.")
ENDIF()

# Get all interface header files of mcl connectivity component.     
FILE(GLOB MCL_CONNECTIVITY_INTERFACE_HEADER_FILES "${MCL_CONNECTIVITY_CMAKE_ROOT_DIR}/include/mcl_connectivity/*.h")

# Install directory for interface header files of mcl connectivity component.
INSTALL(FILES ${MCL_CONNECTIVITY_INTERFACE_HEADER_FILES} DESTINATION "${PACKAGE_DESTINATION_INCLUDE}/mcl_connectivity")
