#Set sources
FILE(GLOB SOURCES *.c)
LIST(APPEND MCL_CONNECTIVITY_SOURCES ${SOURCES})

SET(MCL_CONNECTIVITY_SOURCES ${MCL_CONNECTIVITY_SOURCES} CACHE INTERNAL "MCL_CONNECTIVITY_SOURCES" FORCE)

#Specify library as target
SET(PROJECT_LIBRARY_OUTPUT mcl_connectivity CACHE INTERNAL "PROJECT_LIBRARY_OUTPUT" FORCE)
ADD_LIBRARY(${PROJECT_LIBRARY_OUTPUT} ${MCL_USER_DEFINED_DYNAMIC_OR_STATIC} $<TARGET_OBJECTS:cJSON> ${MCL_CONNECTIVITY_SOURCES})

SET_TARGET_PROPERTIES(${PROJECT_LIBRARY_OUTPUT} PROPERTIES FOLDER ${MCL_COMPONENT})
SET_TARGET_PROPERTIES(${PROJECT_LIBRARY_OUTPUT} PROPERTIES INSTALL_RPATH ${CMAKE_INSTALL_PREFIX}/${PACKAGE_DESTINATION_LIB})

ADD_DEPENDENCIES(mcl_connectivity mcl_core)

#Set include directories
LIST(APPEND MCL_CONNECTIVITY_INCLUDE_DIRECTORIES ${CMAKE_CURRENT_SOURCE_DIR})
LIST(APPEND MCL_CONNECTIVITY_INCLUDE_DIRECTORIES ${CMAKE_CURRENT_BINARY_DIR})
LIST(APPEND MCL_CONNECTIVITY_INCLUDE_DIRECTORIES ${MCL_CMAKE_ROOT_DIR}/mcl_core/include)
LIST(APPEND MCL_CONNECTIVITY_INCLUDE_DIRECTORIES ${MCL_CONNECTIVITY_CMAKE_ROOT_DIR}/include)

IF(WIN32 OR WIN64)
	LIST(APPEND MCL_CONNECTIVITY_LIBS ${MCL_OUTPUT_DIR}/mcl_core.lib)
ELSE()
	IF(MCL_STATICLIB)
		LIST(APPEND MCL_CONNECTIVITY_LIBS ${MCL_OUTPUT_DIR}/libmcl_core.a)
	ELSE()
		LIST(APPEND MCL_CONNECTIVITY_LIBS ${MCL_OUTPUT_DIR}/libmcl_core.so)
	ENDIF()
ENDIF()

LIST(APPEND MCL_CONNECTIVITY_LIBS ${MCL_CORE_LIBS})

SET(MCL_CONNECTIVITY_INCLUDE_DIRECTORIES ${MCL_CONNECTIVITY_INCLUDE_DIRECTORIES} CACHE INTERNAL "MCL_CONNECTIVITY_INCLUDE_DIRECTORIES" FORCE)
TARGET_INCLUDE_DIRECTORIES(${PROJECT_LIBRARY_OUTPUT} PUBLIC ${MCL_CONNECTIVITY_INCLUDE_DIRECTORIES})

TARGET_LINK_LIBRARIES(${PROJECT_LIBRARY_OUTPUT} ${MCL_CONNECTIVITY_LIBS})

#Install MCL target
INSTALL(TARGETS mcl_connectivity
        RUNTIME DESTINATION "${PACKAGE_DESTINATION_LIB}"
        LIBRARY DESTINATION "${PACKAGE_DESTINATION_LIB}"
        ARCHIVE DESTINATION "${PACKAGE_DESTINATION_LIB}")
