#Set name of the test framework.
SET(TEST_FRAMEWORK unity_and_cmock)

#Set paths.
SET(INTEGRATION_TEST_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}")
SET(TEST_RUNNER_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/testrunner")
SET(GENERATE_TEST_RUNNER_SCRIPT_PATH "mcl_core/test/lib/CMock/vendor/unity/auto/generate_test_runner.rb")

#Set Ruby Command.
SET(RUBY_CMD "ruby")   
    
#Create test runner directory.
FILE(MAKE_DIRECTORY ${TEST_RUNNER_DIRECTORY})

#Loop over each integration test file.
FILE(GLOB INTEGRATION_TEST_FILE_LIST RELATIVE "${INTEGRATION_TEST_DIRECTORY}" "${INTEGRATION_TEST_DIRECTORY}/*.c") 
FOREACH(INTEGRATION_TEST_FILE ${INTEGRATION_TEST_FILE_LIST})

    #Remove file extension from the testcase file
    STRING(REPLACE ".c" "" INTEGRATION_TEST_FILE_NAME ${INTEGRATION_TEST_FILE})
                 
    #Create test runner.
    SET(TEST_RUNNER_FILE "${INTEGRATION_TEST_FILE_NAME}_runner.c")
    EXECUTE_PROCESS(COMMAND ${RUBY_CMD} ${GENERATE_TEST_RUNNER_SCRIPT_PATH} "${INTEGRATION_TEST_DIRECTORY}/${INTEGRATION_TEST_FILE}" "${TEST_RUNNER_DIRECTORY}/${TEST_RUNNER_FILE}"
        WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
        RESULT_VARIABLE ruby_result	
        OUTPUT_VARIABLE ruby_output)

    #Set test source files.             
    SET(TEST_SOURCES ${INTEGRATION_TEST_DIRECTORY}/${INTEGRATION_TEST_FILE} ${TEST_RUNNER_DIRECTORY}/${TEST_RUNNER_FILE})

    #Set the name of the test executable.   
    SET(INTEGRATION_TEST_NAME "${INTEGRATION_TEST_FILE_NAME}")

    #Create integration test executable.    
    ADD_EXECUTABLE(${INTEGRATION_TEST_NAME} ${TEST_SOURCES})

    #Link libraries to executable.
    TARGET_LINK_LIBRARIES(${INTEGRATION_TEST_NAME} ${MCL_CONNECTIVITY_LIBS} ${PROJECT_LIBRARY_OUTPUT} ${TEST_FRAMEWORK})

    #Include required directories
    TARGET_INCLUDE_DIRECTORIES(${INTEGRATION_TEST_NAME} PUBLIC ${MCL_CONNECTIVITY_INCLUDE_DIRECTORIES})

    ADD_TEST(${INTEGRATION_TEST_NAME} ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${INTEGRATION_TEST_NAME})
	
	SET_TARGET_PROPERTIES(${INTEGRATION_TEST_NAME} PROPERTIES FOLDER "${MCL_COMPONENT}/integration_tests")
    
ENDFOREACH(INTEGRATION_TEST_FILE) 
